adds alert menu

--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -62,6 +62,7 @@
                     {% include "warranty_parts/service_menu.html" %}
                 {% endif %}
                 {% if user.is_authenticated %}
+                    {% include "supply_info/alerts_menu.html" %}
                     {% include "info_channel/info_channel_menu.html" %}
                     {% include "supply_info/filters_menu.html" %}
                 {% endif %}
