--- a/supply_info/templates/supply_info/emails/alert_list_email.html
+++ b/supply_info/templates/supply_info/emails/alert_list_email.html
@@ -173,8 +173,8 @@ a {
 <html>
 <p>
     Dzień dobry,<br>
-    poniżej znajdują się informacje o produktach które dodali Państwo do obserwowanych.<br>
-    Prosze pamiętać, że podane stany magazynowe nie uwzględniają niezrealizowanych zamówień, złożonych po zamknięciu naszego biura. <br>
+    poniżej znajdują się informacje o produktach, które dodali Państwo do obserwowanych.<br>
+    Prosze pamiętać, że podane stany magazynowe nie uwzględniają niezrealizowanych zamówień złożonych po zamknięciu naszego biura. <br>
 </p>
  <p>
     Wszystkie poniższe alerty zostały dezaktywowane. Aby je aktywowoac proszę zalogować
