--- a/supply_info/templates/supply_info/emails/alert_list_email.html
+++ b/supply_info/templates/supply_info/emails/alert_list_email.html
@@ -177,7 +177,7 @@ a {
     Prosze pamiętać, że podane stany magazynowe nie uwzględniają niezrealizowanych zamówień złożonych po zamknięciu naszego biura. <br>
 </p>
  <p>
-    Wszystkie poniższe alerty zostały dezaktywowane. Aby je aktywowoac proszę zalogować
+    Wszystkie poniższe alerty zostały dezaktywowane. Aby je aktywować proszę zalogować
     się na <a href="https://janomeklub.pl/alerty">janomeklub.pl/alerty</a> i właczyć je ponownie.
 </p>
     <div class="container" style="width: 65%">
