--- a/supply_info/templates/supply_info/products_list.html
+++ b/supply_info/templates/supply_info/products_list.html
@@ -51,7 +51,7 @@
                             {% endfor %}
                     </div>
                     <div class="col-md-3" align="right">
-                        <a href="{% url 'supply_info:alert_add_view' product_pk=product.id  %}"><i class="fas fa-bell" style="color:#e13e2f; padding: 20 20; font-size: 1.3em;"></i></a>
+                        <a href="{% url 'supply_info:alert_add_view' product_pk=product.id  %}"><i class="far fa-bell" style="color:#e13e2f; padding: 20 20; font-size: 1.3em;"></i></a>
                     </div>
                 </div>
             </td>
