fix typo 'katalowa -> katalogowa'

--- a/supply_info/templates/supply_info/machines_list.html
+++ b/supply_info/templates/supply_info/machines_list.html
@@ -10,7 +10,7 @@
             {% if user.is_authenticated %}
                 <th width="6%"> Stan </th>
             {% endif %}
-            <th width="7%" >Cena <br>katalowa</th>
+            <th width="7%" >Cena <br>katalogowa</th>
             <th width="16%">Kolejna dostawa</th>
             <th>Uwagi</th>
             {% if user.is_authenticated %}
