--- a/supply_info/templates/supply_info/search_product.html
+++ b/supply_info/templates/supply_info/search_product.html
@@ -54,9 +54,14 @@
                 <div class="row" id="extra_{{ forloop.parentloop.counter }}" style="display: none;">
                     <div class="col-md-9">
                     Opis: {{ result.name }}
-                    <br>Cena hurtowa:  {% for item in result.price_lists.all %}
+                    <br>Cena hurtowa:
+                        {% for item in result.price_lists.all %}
+                            {% if request.user|has_group:"Dystrybutorzy_C" %}
+                                {{ item.price_c }} zł NETTO
+                            {% else %}
                                 {{ item.price_b }} zł NETTO
-                            {% endfor %}
+                            {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="col-md-3" align="right">
                         <a href="{% url 'supply_info:alert_add_view' product_pk=result.id  %}"><i class="far fa-bell" style="color:#e13e2f; padding: 20 20; font-size: 1.3em;"></i></a>
