--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -63,7 +63,7 @@
                 {% endif %}
                 {% if user.is_authenticated %}
                     {% include "supply_info/alerts_menu.html" %}
-                    {% include "info_channel/info_channel_menu.html" %}
+                    <!--{% include "info_channel/info_channel_menu.html" %} this app is temporary disabled -->
                     {% include "supply_info/filters_menu.html" %}
                 {% endif %}
             </ul>
