adds payment menu template

--- a/supply_info/templates/supply_info/base.html
+++ b/supply_info/templates/supply_info/base.html
@@ -60,6 +60,7 @@
                     {% include "shipments/shipment_menu.html" %}
                     {% include "serial_numbers/warehouse_menu.html" %}
                     {% include "warranty_parts/service_menu.html" %}
+                    {% include "payments/payment_menu.html" %}
                 {% endif %}
                 {% if user.is_authenticated %}
                     {% include "supply_info/alerts_menu.html" %}
