--- a/payments/templates/payments/payment_menu.html
+++ b/payments/templates/payments/payment_menu.html
@@ -1,3 +1,5 @@
-<li class='sub-menu'><a href=''><i class="far fa-money-bill-alt"></i>płatności<div class='fa fa-caret-down right'></div></a>
-<ul></ul>
+<li class='sub-menu'><a href='#payments'><i class="far fa-money-bill-alt"></i>płatności<div class='fa fa-caret-down right'></div></a>
+    <ul>
+        <li><a href="{% url 'payments:read_invoices_data' %}">Sprawdź zaległości</a></li>
+    </ul>
 </li>
