--- a/payments/templates/payments/delayed_payments_list.html
+++ b/payments/templates/payments/delayed_payments_list.html
@@ -48,6 +48,16 @@
             <td colspan="2"> </td>
             <td>{{ invoices.total_dept }} zł</td>
         </tr>
+        <tr>
+            <td colspan="3"> </td>
+            <td>
+                <form method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-default" name="delete" value="{{customer}}">Usuń</button>
+                <button type="submit" class="btn btn-danger" name="send" value="{{customer}}">Wyślij</button>
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
