--- a/payments/templates/payments/delayed_payments_list.html
+++ b/payments/templates/payments/delayed_payments_list.html
@@ -13,7 +13,11 @@
         {% endfor %}
 {% endfor %}
 -->
-
+{% if messages %}
+    {% for message in messages %}
+    <h4  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message }} </h4>
+    {% endfor %}
+{% endif %}
 
 {% for customer, invoices in delayed_invoices.items %}
 <div class="container" style="width: 65%">
