refactor: clean empty spaces, comments, etc

--- a/payments/templates/payments/delayed_payments_list.html
+++ b/payments/templates/payments/delayed_payments_list.html
@@ -1,18 +1,7 @@
 {% extends 'supply_info/base.html' %}
 
 {% block content %}
-<!--
-{% for customer, invoices in delayed_invoices.items %}
-        {{ customer }} <br>
-        {% for key, invoice in invoices.items %}
-            {{ invoices.total_dept }} <br>
-                {% for invoice_number, invoice_data  in invoice.items %}
-                       Numer:  {{invoice_number }}
-                        Dane: {{ invoice_data }} <br>
-                {% endfor %}
-        {% endfor %}
-{% endfor %}
--->
+
 {% if messages %}
     {% for message in messages %}
     <h4  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message }} </h4>
@@ -20,7 +9,7 @@
 {% endif %}
 
 {% for customer, invoices in delayed_invoices.items %}
-<div class="container" style="width: 65%">
+<div class="container" style="width: 675px;">
     <table class="table table-striped">
         <thead>
             <tr>
@@ -42,7 +31,7 @@
                 <td>{{ invoice_number }}</td>
                 <td>{{ invoice_data.inv_create_date}} </td>
                 <td>{{ invoice_data.inv_payment_term }}</td>
-                <td>{{ invoice_data.current_gross_amount }} zł</td>
+                <td >{{ invoice_data.current_gross_amount }} zł</td>
         </tr>
                 {% endfor %}
             {% endfor %}
@@ -50,7 +39,7 @@
         <tr>
             <td>Razem do zapłaty:</td>
             <td colspan="2"> </td>
-            <td>{{ invoices.total_dept }} zł</td>
+            <td><b>{{ invoices.total_dept }} zł</b></td>
         </tr>
         <tr>
             <td colspan="3"> </td>
