--- a/payments/templates/payments/emails/delayed_payments_email_notification.html
+++ b/payments/templates/payments/emails/delayed_payments_email_notification.html
@@ -209,7 +209,7 @@
         <tr>
             <td>Razem do zapłaty:</td>
             <td colspan="2"> </td>
-            <td>{{ data.total_dept }} zł</td>
+            <td><b>{{ data.total_dept }} zł</b></td>
         </tr>
         </tbody>
     </table>
