--- a/supply_info/templates/supply_info/alerts_list.html
+++ b/supply_info/templates/supply_info/alerts_list.html
@@ -36,6 +36,10 @@
                         </form>
                     {% endif %}
                     <td><a href="{% url 'supply_info:alert_edit_view' alert.id %}"><button type="button" class="btn btn-default">Edytuj</button></a></td>
+                    <form method="post">
+                        {% csrf_token %}
+                        <td><button type="submit" class="btn btn-danger" name="delete" value="{{alert.id}}" style="padding: 6 14px;">Usuń</button></td>
+                    </form>
                 </tr>
             {% endfor %}
         </tbody>
