Change product model and update api
Change product model, make it simpler by merging prices, availability,
activitu into to the product model.

After this change to api was updated and extendet.

During this changes some unused features was removed.

--- a/supply_info/templates/supply_info/admin_menu.html
+++ b/supply_info/templates/supply_info/admin_menu.html
@@ -1,7 +1,6 @@
 <li class='sub-menu'><a href='#admin'><i class="fas fa-users-cog"></i>administracja<div class='fa fa-caret-down right'></div></a>
     <ul>
         <li><a href="{% url 'admin:index' %}">Admin panel</a></li>
-        <li><a href="{% url 'supply_info:update_product_info' %}" >Zasil bazę</a></li>
-        <li><a href="{% url 'supply_info:update_product_availability' %}">Uaktualnij stany</a></li>
+        <li><a href="{% url 'supply_info:download_file' %}">Pobierz dane</a> </li>
     </ul>
 </li>
